syntax = "proto3";
package network.identity;
option java_package = "bisq.network.identity.protobuf";
option java_multiple_files = true;
import "network_common.proto";
import "security.proto";

message TorIdentity {
  bytes privateKey = 1;
  uint32 port = 2;
}

message NetworkId {
  .network.common.AddressByTransportTypeMap addressByNetworkTypeMap = 1;
  security.PubKey pubKey = 2;
  string nodeId = 3;
  TorIdentity torIdentity = 4;
}